# data-engineering-zoomcamp

./: .gitignore  README.md  gcp_setup.md  pyproject.toml
course_dbt_project/models/marts/: fact_trips.sql  schema.yml
module_01_docker_terraform/homework/: README.md  ingest_data.py  pyproject.toml
module_01_docker_terraform/pipeline/: notebook.ipynb
module_02_orchestration_kestra/homework/: README.md
module_02_orchestration_kestra/pipeline/: docker-compose.yaml  kestra_flows.txt  notebook.ipynb
module_03_data_warehouse/homework/: README.md  load_yellow_taxi_data.py  pyproject.toml
module_04_analytics_engineering/: dbt_project.yml
module_04_analytics_engineering/course_dbt_project/: README.md
module_04_analytics_engineering/course_dbt_project/macros/: get_vendor_names.sql
module_04_analytics_engineering/models/marts/: dim_vendors.sql  dim_zones.sql
module_04_analytics_engineering/taxi_rides_ny/: .gitignore  Dockerfile  README.md  dbt_project_setup.md  docker-compose.yml  ingest_data.py  ingest_fhv_2019.py  pyproject.toml
module_05_data_platforms/: homework.md
module_06_spark/: README.md  module_06_homework.ipynb
module_07_streaming/: docker-compose.yml
module_07_streaming/homework/: README.md  consumer.py  consumer_postgres.py  producer.py  ride_utils.py
module_07_streaming/src/producers/: producer.py  (+1 more)
workshop-dlt-ingestion/: README.md
workshop-dlt-ingestion/my-dlt-pipeline/: open_library_pipeline.py  open_library_top_authors_marimo.py  requirements.txt
workshop-dlt-ingestion/taxi-pipeline/: taxi_payment_share_marimo.py  taxi_pipeline.py
(+14 files in other folders)
