[project]
name = "de-zoomcamp"
version = "0.1.0"
description = "venv for DE Zoomcamp 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.6",
    "dbt-duckdb>=1.10.1",
    "dlt[duckdb,workspace]>=1.22.1",
    "duckdb>=1.4.4",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
]
